# kinodynamic_stack

./: .gitmodules
kinodynamic_gazebo/: CMakeLists.txt  package.xml
kinodynamic_gazebo/config/: bspline_ff_kino.xml  epfl_dynamics_control.yaml  kinodynamic.rviz
kinodynamic_gazebo/launch/: kinodynamic_gazebo.launch
kinodynamic_gazebo/urdf/: cup.xacro  iiwa14.xacro  iiwa_cup.urdf.xacro
kinodynamic_msgs/: CMakeLists.txt  package.xml
kinodynamic_msgs/msg/: PlannerRequest.msg  PlannerStatus.msg
kinodynamic_neural_planner/: CMakeLists.txt  package.xml
kinodynamic_neural_planner/config/: config.yaml
kinodynamic_neural_planner/data/kinodynamic7fixed_12kg_validated/test/: data.tsv
kinodynamic_neural_planner/data/kinodynamic7fixed_12kg_validated/test_old/: data.tsv
kinodynamic_neural_planner/launch/: planner.launch
kinodynamic_neural_planner/scripts/: compute_metrics.py  compute_results_simulation.py  neural_bspline_planner_node.py  planner_request_utils.py  planners_evaluation.py
kinodynamic_neural_planner/scripts/baselines/: baseline_planner_node.py  cbirrt_planner.py  mpcmpnet_params.py  mpcmpnet_planner.py  nlopt_planner.py  sst_planner.py
