<?xml version="1.0"?>
<package format="2">
  <name>kinodynamic_gazebo</name>
  <version>0.0.0</version>
  <description>The kinodynamic_gazebo package</description>

  <maintainer email="piotr.kicki@put.poznan.pl">Piotr Kicki</maintainer>

  <license>MIT</license>

  <author email="piotr.kicki@put.poznan.pl">Piotr Kicki</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <gazebo_ros_control plugin="${prefix}/kinodynamic_gazebo_plugins.xml"/>
  </export>

</package>
